--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Index</title>
 <body>
   <a href='Anandhu_s Personal Site.html'>Anandhu's Personal Website</a>
-  <a href='cv2.html'></a>
+  <a href='cv2.html'>Anandhu's Curriculum Vitae</a>
 </body>
 </head>
 </html>
